# pulse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/code-review/: SKILL.md
.agents/skills/code-review/references/: checklist.md
.claude/: settings.json
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/references/: checklist.md
.github/workflows/: ci.yml
data/: pulse_test_articles.json
docs/: 00_AGENT_INSTRUCTIONS.md  01_business_requirements.md  02_21day_plan.md  03_patterns_reference.md  04_tech_stack.md  architecture.md  journal.md  patterns.md
docs/architecture/: decision-template.md  workspace.dsl
docs/architecture/decisions/: 0001-adopt-structurizr-backed-architecture-decision-records.md  0002-separate-collectors-from-agent-orchestration.md  0003-use-tavily-for-initial-hacker-news-collection.md  0004-use-structurizr-and-mermaid-for-architecture-documentation.md
docs/architecture/flows/: content-pipeline.mmd  daily-digest.mmd  hn-collect.mmd  langgraph-orchestrator.mmd
src/pulse/: __init__.py  __main__.py  display.py  main.py  models.py
src/pulse/agents/: __init__.py  hn_agent.py
src/pulse/collectors/: __init__.py  tavily.py
src/pulse/scripts/: __init__.py  generate_test_data.py
tests/: test_models.py  test_tavily_collector.py
