[project]
name = "pulse"
version = "0.1.0"
description = "Personal AI Intelligence & Content Factory — digest + LinkedIn posts from 5 AI news sources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.23.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
